tests/iac/serverless/vpc_network/serverless.yml
service: sls-vpc-network
frameworkVersion: "3"

provider:
  name: aws
  runtime: python3.12
  region: us-east-1

custom:
  localstack:
    endpoint: ${env:AWS_ENDPOINT_URL, 'http://localhost:4566'}

resources:
  Resources:
    Vpc:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 10.0.0.0/16
        EnableDnsSupport: true
        EnableDnsHostnames: true

    PublicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref Vpc
        CidrBlock: 10.0.1.0/24
        AvailabilityZone: us-east-1a

    PublicSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref Vpc
        CidrBlock: 10.0.2.0/24
        AvailabilityZone: us-east-1b

    AppSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Allow HTTP and SSH
        VpcId: !Ref Vpc
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0

  Outputs:
    VpcId:
      Value: !Ref Vpc
    Subnet1Id:
      Value: !Ref PublicSubnet1
    Subnet2Id:
      Value: !Ref PublicSubnet2
    SecurityGroupId:
      Value: !Ref AppSecurityGroup

plugins:
  - serverless-localstack
